[package]
name = "kraken_transaction_engine_take_home_example"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.53", features = ["derive"] }
csv = "1.4.0"
csv-async = "1.3.1"
futures-util = "0.3.31"
serde = "1.0.228"
serde_derive = "1.0.228"
tokio = { version = "1.48.0", features = ["fs", "io-std", "io-util", "macros", "rt", "rt-multi-thread"] }
tokio-util = { version = "0.7.17", features = ["compat"] }
